<resources>
    <string name="app_name">Product Reviews</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">todo</string>
    <string name="home">Home</string>
    <string name="expert_tips">Best Products</string>
    <string name="most_selling">Most Selling</string>
    <string name="share_it">Share me</string>
    <string name="rate_us">Rate us</string>
    <string name="contact_us">Contact us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="sign_out">Sign Out</string>
    <string name="version">Version: %1$s</string>
    <string name="disclaimer_text">This Product Reviews App takes every precaution to ensure that the information provided
        on the App is current and accurate however the owner of the App does not guarantee the accuracy of any information on this App.
        It is fully the responsibility of users to cross-check before they make any decision.\n\n
The App is not liable for any errors or omissions or any kind of results obtained from the use of this information.</string>
    <string name="no_connection">No Connection</string>
    <string name="item_name">Item name</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="eng">Eng</string>
    <string name="hin">Hin</string>
    <string name="ad_attribution">AD</string>
    <string name="app_id">ca-app-pub-1247850544347178~2799712755</string>
    <string name="get_started">Get Started</string>
    <string name="get_the_best_buying_advisory">Get the Best Buying Advisory!</string>
    <string name="welcome_to_nproduct_reviews">Welcome To\nProduct Reviews</string>
    <string name="get_ads_free_app">Get Ads Free</string>

</resources>